单个组件的版本保留

--- a/src/doc/views/form/datepicker/v0.0.1.md
+++ b/src/doc/views/form/datepicker/v0.0.1.md
@@ -218,7 +218,12 @@
 
 
 <script>
+    import KsDater from 'KsComponents/KsDater/v1.0.0'
+
+    console.log(KsDater)
+
     export default {
+        components:KsDater,
         data(){
             return {
                 datemonth:'2016-10',
