FED-103 文档版本、组件版本驻留

--- a/src/doc/views/data/pager/v1.0.0.md
+++ b/src/doc/views/data/pager/v1.0.0.md
@@ -92,6 +92,7 @@ size:{{size}}
 ```
 <script>
     export default {
+        kscomponents:['KsPager_v1'],
         data(){
             return {
                 page_current:24,
