--- a/src/doc/views/form/datepicker/v0.1.0.md
+++ b/src/doc/views/form/datepicker/v0.1.0.md
@@ -218,12 +218,9 @@
 
 
 <script>
-    import KsDater from 'KsComponents/KsDater/v1.0.0'
-
-    console.log(KsDater)
 
     export default {
-        components:KsDater,
+        kscomponents:['KsDater_v0'],
         data(){
             return {
                 datemonth:'2016-10',
