--- a/src/doc/views/form/datepicker/v1.0.0.md
+++ b/src/doc/views/form/datepicker/v1.0.0.md
@@ -218,7 +218,9 @@
 
 
 <script>
+
     export default {
+        kscomponents:['KsDater_v1'],
         data(){
             return {
                 datemonth:'2016-10',
