FED-123  KsButton KsRadio KsCheckbox KsSwitch

--- a/src/doc/views/base/button/v0.1.0.md
+++ b/src/doc/views/base/button/v0.1.0.md
@@ -214,8 +214,7 @@
   ];
 
   export default{
-    kscomponents:['KsButton','KsButtonAbstract','KsSwitch'],
-    // components:Vue.util.mergeOptions(KsButton,KsSwitch),
+    kscomponents:['KsButton_v0','KsSwitch_v0'],
     init(){
       console.log('base button.md init----')
     },
