--- a/src/doc/views/form/checkbox/v0.1.0.md
+++ b/src/doc/views/form/checkbox/v0.1.0.md
@@ -116,17 +116,7 @@
 <label v-text="checkboxGroup2 | json 4"></label>
 ```
 
-<script>
-  export default{
-    data () {
-      return {
-        checkboxGroup1: [],
-        checkboxGroup2: [],
-        checkboxDisable: false
-      }
-    }
-  }
-</script>
+
 
 ### API
 
@@ -149,3 +139,18 @@
 |------|-------|----------|---------|---------|---------|-------|--------|
 | vModel | 存储了当前 `KsRadioGroup` 组中选中的值 | props | Any | `true` | 否 | 无 | '' |
 | @change | `KsRadioGroup` change 事件 | event | - | - | 否 | - | - |
+
+
+
+<script>
+  export default{
+    kscomponents:['KsCheckbox_v0','KsSwitch_v0'],
+    data () {
+      return {
+        checkboxGroup1: [],
+        checkboxGroup2: [],
+        checkboxDisable: false
+      }
+    }
+  }
+</script>
