--- a/src/doc/views/form/radio/v0.1.0.md
+++ b/src/doc/views/form/radio/v0.1.0.md
@@ -152,26 +152,7 @@
 </ks-radio-group>
 ```
 
-<script>
-  export default{
-    data () {
-      return {
-        baseUse: '',
-        propsColor: '',
-        
-        radioDisabled: false,
-        radioDisable: '',
-        
-        defC: '',
-        btnUse1: '',
-        btnUse2: '',
-        btnUse3: '',
 
-        group: ''
-      }
-    }
-  }
-</script>
 
 #### 高级使用
 
@@ -205,3 +186,30 @@
 | 参数 | 说明 | 接口类型 | 类型 | 双向（twoWay） | 是否必须 | 可选值 | 默认值 |
 |------|-------|----------|---------|---------|---------|-------|--------|
 | - | - | - | - | - | - | - | - |
+
+
+
+<script>
+  export default{
+    kscomponents:['KsRadio_v0','KsSwitch_v0'],
+    data () {
+      return {
+        baseUse: '',
+        propsColor: '',
+        
+        radioDisabled: false,
+        radioDisable: '',
+        
+        defC: '',
+        btnUse1: '',
+        btnUse2: '',
+        btnUse3: '',
+
+        group: ''
+      }
+    },
+    created(){
+      console.log(this)
+    }
+  }
+</script>
