--- a/src/doc/views/form/switch/v0.1.0.md
+++ b/src/doc/views/form/switch/v0.1.0.md
@@ -73,23 +73,7 @@
 > `AbstractSwitch` 组件可以自定义 高度, 宽度, 每个状态下都有对应的 slide 颜色 dot 颜色 font 颜色
 > font 大小 以及 text 内容设置
 
-<script>
-  let statusMapper = {
-     off: {slideColor: '#FFF', dotColor: '#FFF', fontColor: '#E1E1E1', fontSize: '14', text: 'OFF'},
-     on: {slideColor: '#55C45A', dotColor: '#FFF', fontColor: '#FFF', fontSize: '16', text: 'ON'}
-   };
-  
-  export default{
-    data () {
-      return {
-        statusMapper,
-        status: 'off',
-        
-        switchDisable: false
-      }
-    }
-  }
-</script>
+
 
 ### 脚本
 
@@ -145,3 +129,22 @@
 | fontSize | 字体大小 | props | Number | - | 是 | 无 | - |
 | text | 显示文字 | props | String | -| 是 | 无 | - |
 
+
+<script>
+  let statusMapper = {
+     off: {slideColor: '#FFF', dotColor: '#FFF', fontColor: '#E1E1E1', fontSize: '14', text: 'OFF'},
+     on: {slideColor: '#55C45A', dotColor: '#FFF', fontColor: '#FFF', fontSize: '16', text: 'ON'}
+   };
+  
+  export default{
+    kscomponents:['KsSwitch_v0'],
+    data () {
+      return {
+        statusMapper,
+        status: 'off',
+        
+        switchDisable: false
+      }
+    }
+  }
+</script>
