--- a/src/doc/views/notice/notice-center/v0.1.0.md
+++ b/src/doc/views/notice/notice-center/v0.1.0.md
@@ -22,6 +22,7 @@
 
 <script>
   export default{
+    kscomponents:['KsButton_v0','KsNotice'],
     data () {
       return { 
         title: 'title',
