FED-123 添加KsMask KsDialog KsModal 版本调整

--- a/src/doc/views/notice/dialog/v1.0.0.md
+++ b/src/doc/views/notice/dialog/v1.0.0.md
@@ -205,6 +205,7 @@ this.$KsDialog.success('成功!', null, true).then(function () {
 
 <script>
   export default{
+    kscomponents:['KsButton_v0','KsDialog_v1'],
     data () {
       return {
         dialogShow: false
