--- a/src/doc/views/notice/modal/v1.0.0.md
+++ b/src/doc/views/notice/modal/v1.0.0.md
@@ -193,7 +193,7 @@ let defaults = {
 
 <script>
   export default{
-    kscomponents:['KsSwitch_v0'],
+    kscomponents:['KsButton_v0','KsSwitch_v0','KsModal_v1','KsModalEntity_v1','KsModalCenter_v1'],
     data () {
       return {
         modalShow: false,
