--- a/src/doc/views/data/pager/v0.1.0.md
+++ b/src/doc/views/data/pager/v0.1.0.md
@@ -23,20 +23,18 @@ page_current:{{page_current}}
     v-bind:length="7"
     v-bind:total="100"
     v-bind:size="13"
-    v-on:change="change"></ks-page>
+    v-bind:on-change="change"></ks-page>
 
-// 新版本1.1.0 去除了老API v-bind:on-change 回掉方法 
 
 ```
 ### API
-| 参数 | 版本 | 说明 | 接口类型 | 类型 | 可选值 | 默认值 |
-|------|-------|-------|----------|---------|-------|--------|
-| current || 当前选中的页数 | props | Number | 无 |无  |
-| length || 展示的页数长度（`奇数`） | props | Number | `非必填` | 7 |
-| total || 总条数 | props | Number | 无 | 无 |
-| size || 每页展示条数 | props | Number | `非必填` | 10 |
-| on-change |V1.1.0移除| 分页改变时调用 | props  | Function | `非必填` | 无 |
-| v-on:change |V1.1.0添加| 分页改变时调用 | props  | Event | `非必填` | 无 |
+| 参数 | 说明 | 接口类型 | 类型 | 可选值 | 默认值 |
+|------|-------|----------|---------|-------|--------|
+| current | 当前选中的页数 | props | Number | 无 |无  |
+| length | 展示的页数长度（`奇数`） | props | Number | `非必填` | 7 |
+| total | 总条数 | props | Number | 无 | 无 |
+| size | 每页展示条数 | props | Number | `非必填` | 10 |
+| on-change | 分页改变时调用 | props  | Function | `非必填` | 无 |
 
 
 ### pageGroup
@@ -48,7 +46,7 @@ size:{{size}}
     v-bind:length="7"
     v-bind:total="100"
     v-bind:sizes="[10,17,30]"
-    v-on:change="change2"></ks-page-group>
+    v-bind:on-change="change2"></ks-page-group>
 
 ```html
 <ks-page-group
@@ -57,14 +55,13 @@ size:{{size}}
     v-bind:length="7"
     v-bind:total="100"
     v-bind:sizes="[10,17,30]"
-    v-on:change="change2"></ks-page-group>
+    v-bind:on-change="change2"></ks-page-group>
 ```
 `比 ks-page 组件多的接口`
-| 参数 | 版本 | 说明 | 接口类型 | 类型 | 可选值 | 默认值 |
-|------|-------|-------|----------|---------|-------|--------|
-| sizes || 页面展示的数据条数 | props | Array | `非必填` | [10,20,100] |
-| on-change |V1.1.0移除| 分页改变时调用（val,type`sizes变化输出SIZE-CHANGE`） | props  | Function | `非必填` | 无 |
-| v-on:change |V1.1.0添加| 分页改变时调用（val,type`sizes变化输出SIZE-CHANGE`） | props  | Event | `非必填` | 无 |
+| 参数 | 说明 | 接口类型 | 类型 | 可选值 | 默认值 |
+|------|-------|----------|---------|-------|--------|
+| sizes | 页面展示的数据条数 | props | Array | `非必填` | [10,20,100] |
+| on-change | 分页改变时调用（val,type`sizes变化输出SIZE-CHANGE`） | props  | Function | `非必填` | 无 |
 
 ```javascript
 <script>
