--- a/src/doc/views/form/radio/v0.1.0.md
+++ b/src/doc/views/form/radio/v0.1.0.md
@@ -96,10 +96,12 @@
 <br>
 
 > 使用 `defChecked` 可以默认选中张三
-
+dd
 <br>
 
-<ks-btn-radio name="base-btn" :model.sync="btnUse2" :def-checked="true" value="ZhangSan">张三</ks-btn-radio> <ks-btn-radio name="base-btn" :model.sync="btnUse2" value="LiSi">李四</ks-btn-radio> <ks-btn-radio name="base-btn" :model.sync="btnUse2" value="WangWu">王五</ks-btn-radio>
+<ks-btn-radio name="base-btn" :model.sync="btnUse2"  value="ZhangSan">张三</ks-btn-radio> 
+<ks-btn-radio name="base-btn" :def-checked="true" :model.sync="btnUse2" value="LiSi">李四</ks-btn-radio> 
+<ks-btn-radio name="base-btn" :model.sync="btnUse2" value="WangWu">王五</ks-btn-radio>
 
 <br>
 
