--- a/src/doc/views/navigation/tabs/v0.1.0.md
+++ b/src/doc/views/navigation/tabs/v0.1.0.md
@@ -1,6 +1,6 @@
-## tabs组件
+## KsTabs
 > **Author:张大柱**
-> 
+> 常用tab切换组件
 
 ------
 
@@ -8,7 +8,7 @@
 
 <div style="">
 
-<ks-tabs v-on:change="KsTabsChange" rerender='true'>
+<ks-tabs v-on:change="KsTabsChange" rerender>
     <ks-tab title="aaaaaaa" status="active">
         aa-内容
     </ks-tab>
@@ -19,6 +19,20 @@
         cc-内容<ks-icon name='weixinzhifu'></ks-icon>
     </ks-tab>
 </ks-tabs>
+
+```html
+<ks-tabs v-on:change="KsTabsChange" rerender>
+    <ks-tab title="aaaaaaa" status="active">
+        aa-内容
+    </ks-tab>
+    <ks-tab title="<h4>bb</h4>">
+        bb-内容
+    </ks-tab>
+    <ks-tab title="<h4><ks-icon name='weixinzhifu'></ks-icon>cc</h4>">
+        cc-内容<ks-icon name='weixinzhifu'></ks-icon>
+    </ks-tab>
+</ks-tabs>
+```
 
 <br>
 
@@ -34,9 +48,8 @@
     </ks-tab>
 </ks-tabs>
 
-<br>
-
-<ks-tabs type="underline">
+```html
+<ks-tabs type="border">
     <ks-tab title="<h1>aa</h1>">
         aa-内容
     </ks-tab>
@@ -47,9 +60,63 @@
         cc-内容
     </ks-tab>
 </ks-tabs>
+```
+
+<br>
+
+<ks-tabs type="underline">
+    <ks-tab title="<h1>aa</h1>">
+        aa-内容
+    </ks-tab>
+    <ks-tab title="<span>bb</span>" status="active">
+        bb-内容
+    </ks-tab>
+    <ks-tab title="<span>cc</span>">
+        cc-内容
+    </ks-tab>
+</ks-tabs>
     
+
+```html
+<ks-tabs type="underline">
+    <ks-tab title="<h1>aa</h1>">
+        aa-内容
+    </ks-tab>
+    <ks-tab title="<span>bb</span>" status="active">
+        bb-内容
+    </ks-tab>
+    <ks-tab title="<span>cc</span>">
+        cc-内容
+    </ks-tab>
+</ks-tabs>
+```
 </div>
 
+
+### API
+
+| 参数 | 说明 | 接口类型 | 类型 | 双向（twoWay） | 是否必须 | 可选值 | 默认值 |
+|------|-------|----------|---------|---------|---------|-------|--------|
+| type | KsTabs类型 | props | String | `false` | 否 | `overline``underline``border` | `overline` |
+| v-on:change | tab改变时触发 | props | Event | `false` | 否 |  |  |
+| status | 当前状态(选中) | props | String | `false` | 否 | `active` |  |
+
+<br>
+
+```html
+<script type="text/javascript">
+    export default {
+        data(){
+            return {}
+        },
+        methods:{
+            KsTabsChange(res){
+                console.log(res)
+            }
+        }
+    }
+</script>
+```
 
 <script type="text/javascript">
     export default {
