--- a/src/doc/views/navigation/tabs/v0.1.0.md
+++ b/src/doc/views/navigation/tabs/v0.1.0.md
@@ -40,7 +40,7 @@
     <ks-tab title="<h1>aa</h1>">
         aa-内容
     </ks-tab>
-    <ks-tab title="<span>bb</span>"  status="active">
+    <ks-tab title="<span>bb</span>">
         bb-内容
     </ks-tab>
     <ks-tab title="<span>cc</span>">
@@ -53,7 +53,7 @@
     <ks-tab title="<h1>aa</h1>">
         aa-内容
     </ks-tab>
-    <ks-tab title="<span>bb</span>"  status="active">
+    <ks-tab title="<span>bb</span>">
         bb-内容
     </ks-tab>
     <ks-tab title="<span>cc</span>">
@@ -64,11 +64,11 @@
 
 <br>
 
-<ks-tabs type="underline">
+<ks-tabs type="underline" v-on:change="KsTabsChange">
     <ks-tab title="<h1>aa</h1>">
         aa-内容
     </ks-tab>
-    <ks-tab title="<span>bb</span>" status="active">
+    <ks-tab title="<span>bb</span>" v-bind:status="active">
         bb-内容
     </ks-tab>
     <ks-tab title="<span>cc</span>">
@@ -78,11 +78,11 @@
     
 
 ```html
-<ks-tabs type="underline">
+<ks-tabs type="underline" v-on:change="KsTabsChange">
     <ks-tab title="<h1>aa</h1>">
         aa-内容
     </ks-tab>
-    <ks-tab title="<span>bb</span>" status="active">
+    <ks-tab title="<span>bb</span>" v-bind:status="active">
         bb-内容
     </ks-tab>
     <ks-tab title="<span>cc</span>">
@@ -107,7 +107,9 @@
 <script type="text/javascript">
     export default {
         data(){
-            return {}
+            return {
+                active:'active'
+            }
         },
         methods:{
             KsTabsChange(res){
@@ -122,12 +124,19 @@
     export default {
         kscomponents:['KsTabs_v0','KsIcon_v0'],
         data(){
-            return {}
+            return {
+                active:''
+            }
         },
         methods:{
             KsTabsChange(res){
-                console.log(res)
+                console.log('KsTabsChange',res)
             }
+        },
+        created(){
+            setTimeout(()=>{
+                this.active = 'active'
+            },4000)
         }
     }
 </script>
