--- a/src/doc/views/form/checkbox/v0.1.0.md
+++ b/src/doc/views/form/checkbox/v0.1.0.md
@@ -61,7 +61,7 @@
 
 <br>
 
-<ks-checkbox-group :v-model.sync="checkboxGroup1">
+<ks-checkbox-group v-bind:v-model.sync="checkboxGroup1">
   <ks-checkbox name="zhangSan">张三</ks-checkbox>
   <ks-checkbox name="liSi">李四</ks-checkbox>
   <ks-checkbox name="wangWu">王五</ks-checkbox>
@@ -77,7 +77,7 @@
 > 同样的我们队 `vModel` 属性进行操作也会影响到内容 `ks-checkbox` 的选中状态。
 
 ```html
-<ks-checkbox-group :v-model.sync="checkboxGroup1">
+<ks-checkbox-group v-bind:v-model.sync="checkboxGroup1">
   <ks-checkbox name="zhangSan">张三</ks-checkbox>
   <ks-checkbox name="liSi">李四</ks-checkbox>
   <ks-checkbox name="wangWu">王五</ks-checkbox>
@@ -86,7 +86,7 @@
 <label v-text="checkboxGroup1 | json 4"></label>
 ```
 
-<ks-checkbox-group :v-model.sync="checkboxGroup2">
+<ks-checkbox-group v-bind:v-model.sync="checkboxGroup2">
   <ks-checkbox name="zhangSan">张三</ks-checkbox>
   <ks-checkbox name="liSi">李四</ks-checkbox>
   <ks-checkbox name="wangWu">王五</ks-checkbox>
@@ -104,7 +104,7 @@
 <br>
 
 ```html
-<ks-checkbox-group :v-model.sync="checkboxGroup12">
+<ks-checkbox-group v-bind:v-model.sync="checkboxGroup12">
   <ks-checkbox name="zhangSan">张三</ks-checkbox>
   <ks-checkbox name="liSi">李四</ks-checkbox>
   <ks-checkbox name="wangWu">王五</ks-checkbox>
