--- a/src/doc/views/data/table/v0.1.0.md
+++ b/src/doc/views/data/table/v0.1.0.md
@@ -11,17 +11,26 @@
 </p>
 <br/>
 
-<ks-table
-    v-bind:columns="columns"
-    v-bind:data="tableData"
-    v-on:change-sort="sortChange"
-    v-on:change-checked="checkedChange"></ks-table>
+<ks-tabs>
+    <ks-tab title="aaa">
+        <ks-table
+            v-bind:uid="_uid"
+            v-bind:columns="columns"
+            v-bind:data="tableData"
+            v-on:change-sort="sortChange"
+            v-on:change-checked="checkedChange"></ks-table>
+            <ks-button v-on:click="addOneData">添加一条</ks-button>    
+    </ks-tab>
+    <ks-tab title="bbb"></ks-tab>
+</ks-tabs>
 
-<ks-button v-on:click="addOneData">添加一条</ks-button>
+
+
 
 
 ```html
 <ks-table
+    v-bind:uid="_uid"
     v-bind:columns="columns"
     v-bind:data="tableData"
     v-on:change-sort="sortChange"
@@ -31,6 +40,7 @@
 
 | 参数 | 说明 | 接口类型 | 类型 | 可选值 | 默认值 |
 |------|-------|----------|---------|-------|--------|
+| uid | 当前组件下标（_uid） | props | Number | `必填` | 无 |
 | columns | 设置表格的表头 | props | Array | `必填` | 无 |
 | columns -> table-idx | 序号 |  | Boolean |  | false |
 | columns -> sortable | 排序 |  | Boolean |  | false |
@@ -415,7 +425,7 @@ colspan="2"  意思是向右合并两个单元格
 <script type="text/javascript">
     
     export default {
-        kscomponents:['KsTable_v0','KsButton_v0'],
+        kscomponents:['KsTable_v0','KsButton_v0','KsTabs_v0','KsNotice'],
         data(){
             this.checkeds = []
             return {
