FED-103 统一调整版本

--- a/src/doc/views/data/table/v0.1.0.md
+++ b/src/doc/views/data/table/v0.1.0.md
@@ -425,7 +425,7 @@ colspan="2"  意思是向右合并两个单元格
 <script type="text/javascript">
     
     export default {
-        kscomponents:['KsTable_v0','KsButton_v0','KsTabs_v0','KsNotice'],
+        kscomponents:['KsTable_v0','KsButton_v0','KsTabs_v0','KsNotice_v1'],
         data(){
             this.checkeds = []
             return {
