--- a/src/doc/views/notice/notice-center/v1.0.0.md
+++ b/src/doc/views/notice/notice-center/v1.0.0.md
@@ -1,4 +1,4 @@
-## NoticeCenter 通知中心
+## KsNotice 通知中心
 
 > 通知中心
 > 作者: pkeros(张杰)
@@ -45,7 +45,9 @@
 //                    V       V       V        V              V
 this.$KsNotice.post(title, content, type,    delay, o => console.log(o));
 ```
+
 > 回调函数中接受的 `o` 对象是当前关闭信息的详细配置信息，具体内容如下:
+
 ```javascript
 {
   closeCb: Function,                  // 关闭当前信息的回调函数，也就传入的回调函数
@@ -59,6 +61,7 @@ this.$KsNotice.post(title, content, type,    delay, o => console.log(o));
   _uid: Number                        // 当前信息的 UID
 }
 ```
+
 > 当前不需要传入 delay 参数是该参数可以省去，该参数默认值为 `4500`，如果不要传入 delay 参数那么 close 的回调可以提前。
 ```javascript
 //                 通知标题  通知内容 通知类型  关闭之后的回调
