--- a/src/doc/views/data/table/v0.1.0.md
+++ b/src/doc/views/data/table/v0.1.0.md
@@ -11,7 +11,7 @@
 </p>
 <br/>
 
-<ks-tabs>
+<ks-tabs v-on:change="changeTab">
     <ks-tab title="aaa">
         <ks-table
             v-bind:uid="_uid"
@@ -486,6 +486,9 @@ colspan="2"  意思是向右合并两个单元格
             // checkbox 变化触发
             checkedChange(data,index){
                 console.log(data,index)
+            },
+            changeTab(index){
+                console.log(index)
             }
             
         },
